--- a/src/rosey/locales/jp.json
+++ b/src/rosey/locales/jp.json
@@ -35,6 +35,78 @@
 		"original": "",
 		"value": ""
 	},
+	"a-contact-block": {
+		"original": "\n      A contact block\n    ",
+		"value": "接点ブロック"
+	},
+	"an-image-card-grid": {
+		"original": "\n      An image card grid\n    ",
+		"value": "画像カードグリッド"
+	},
+	"bite-sized-information": {
+		"original": "\n      Bite-sized information\n    ",
+		"value": "一口サイズの情報\n"
+	},
+	"email-address": {
+		"original": "Email address *",
+		"value": "Email address *"
+	},
+	"eyebrow-heading": {
+		"original": "\n      Eyebrow Heading\n    ",
+		"value": "眉頭"
+	},
+	"full-name": {
+		"original": "Full name *",
+		"value": "Full name *"
+	},
+	"markdown:add-some-description-text-to-complement-the-block": {
+		"original": "    \n        <p>Add some description text to complement the block.</p>\n\n    ",
+		"value": "<p>ブロックを補完する説明テキストを追加します。</p>\n"
+	},
+	"markdown:address-1-fake-st-faketown": {
+		"original": "    \n        <p>Address: 1 Fake St, Faketown</p>\n\n    ",
+		"value": "<p>住所：1 Fake St, Faketown</p>\n"
+	},
+	"markdown:email-address-mybusiness@businesscom": {
+		"original": "    \n        <p>Email address: mybusiness@business.com</p>\n\n    ",
+		"value": "<p>電子メールアドレス：</p>\n"
+	},
+	"markdown:invite-your-customers-to-get-in-touch-with-you": {
+		"original": "    \n        <p>Invite your customers to get in touch with you.</p>\n\n    ",
+		"value": "    \n        <p>Invite your customers to get in touch with you.</p>\n\n    "
+	},
+	"markdown:opening-hours-9-5pm-monday-to-friday": {
+		"original": "    \n        <p>Opening hours: 9-5pm, Monday to Friday</p>\n\n    ",
+		"value": "<p>営業時間: 月曜日から金曜日の 9 時から 17 時まで</p>\n"
+	},
+	"markdown:phone-number-312-325-326": {
+		"original": "    \n        <p>Phone number: 312 325 326</p>\n\n    ",
+		"value": "<p>電話番号： 312 325 326</p>\n"
+	},
+	"markdown:these-image-cards-combine-a-short-written-message-and-a-strong-visual-image": {
+		"original": "    \n        <p>These image cards combine a short written message and a strong visual image.</p>\n\n    ",
+		"value": "    \n        <p>These image cards combine a short written message and a strong visual image.</p>\n\n    "
+	},
+	"markdown:these-versatile-cards-can-be-used-to-talk-about-your-services-or-products-or-anything-else-you-are-keen-to-share-with-your-audience": {
+		"original": "    \n        <p>These versatile cards can be used to talk about your services or products, or anything else you are keen to share with your audience.</p>\n\n    ",
+		"value": "<p>これらの多用途カードは、サービスや製品、または聴衆と共有したいその他のことについて話すために使用できます。</p>\n"
+	},
+	"markdown:this-is-a-simple-yet-powerful-block-to-display-not-only-your-location-by-using-openstreetmaps-but-also-any-other-contact-details-you-wish-to-share-with-your-customers": {
+		"original": "    \n        <p>This is a simple yet powerful block to display not only your location by using OpenStreetMaps, but also any other contact details you wish to share with your customers.</p>\n\n    ",
+		"value": "<p>これは、OpenStreetMaps を使用して現在地だけでなく、顧客と共有したいその他の連絡先の詳細も表示する、シンプルかつ強力なブロックです。</p>\n"
+	},
+	"message": {
+		"original": "Message",
+		"value": "Message"
+	},
+	"primary-heading": {
+		"original": "\n      Primary Heading\n    ",
+		"value": "\n      Primary Heading\n    "
+	},
+	"submit": {
+		"original": "\n        Submit\n        \n            <!--bookshop-live name(generic/hero-library-icon) params(hero_library_icon_name:arrow_type icon_type:\"solid\" icon_size:'extra-small'  color:'transparent') context() -->\n\n\n\n<span class=\"c-hero-library-icon c-hero-library-icon--extra-small c-hero-library-icon--solid \" style=\"--c-hero-library-icon-color: transparent\">\n    \n        <svg aria-hidden=\"true\" class=\"c-hero-library-icon__svg\" fill=\"currentColor\" viewBox=\"0 0 24 24\" xmlns=\"http://www.w3.org/2000/svg\">\n  <path clip-rule=\"evenodd\" d=\"M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z\" fill-rule=\"evenodd\"></path>\n</svg>\n    \n</span>\n<!--bookshop-live end-->\n        \n    ",
+		"value": "\n        Submit\n        \n            <!--bookshop-live name(generic/hero-library-icon) params(hero_library_icon_name:arrow_type icon_type:\"solid\" icon_size:'extra-small'  color:'transparent') context() -->\n\n\n\n<span class=\"c-hero-library-icon c-hero-library-icon--extra-small c-hero-library-icon--solid \" style=\"--c-hero-library-icon-color: transparent\">\n    \n        <svg aria-hidden=\"true\" class=\"c-hero-library-icon__svg\" fill=\"currentColor\" viewBox=\"0 0 24 24\" xmlns=\"http://www.w3.org/2000/svg\">\n  <path clip-rule=\"evenodd\" d=\"M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z\" fill-rule=\"evenodd\"></path>\n</svg>\n    \n</span>\n<!--bookshop-live end-->\n        \n    "
+	},
 	"a-hero-for-a-booking-form-page": {
 		"original": "\n      A hero for a booking form page\n    ",
 		"value": "予約フォームページのヒーロー"
@@ -55,10 +127,6 @@
 		"original": "\n        Another optional button!\n        \n            <!--bookshop-live name(generic/hero-library-icon) params(hero_library_icon_name:arrow_type icon_type:\"solid\" icon_size:'extra-small'  color:'transparent') context() -->\n\n\n\n<span class=\"c-hero-library-icon c-hero-library-icon--extra-small c-hero-library-icon--solid \" style=\"--c-hero-library-icon-color: transparent\">\n    \n        <svg aria-hidden=\"true\" class=\"c-hero-library-icon__svg\" fill=\"currentColor\" viewBox=\"0 0 24 24\" xmlns=\"http://www.w3.org/2000/svg\">\n  <path clip-rule=\"evenodd\" d=\"M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z\" fill-rule=\"evenodd\"></path>\n</svg>\n    \n</span>\n<!--bookshop-live end-->\n        \n    ",
 		"value": "もう一つのオプションボタン！"
 	},
-	"bite-sized-information": {
-		"original": "\n      Bite-sized information\n    ",
-		"value": "一口サイズの情報\n"
-	},
 	"booking-form": {
 		"original": "\n      Booking form\n    ",
 		"value": "予約フォーム"
@@ -66,18 +134,6 @@
 	"choose-a-date": {
 		"original": "Choose a date *",
 		"value": "Choose a date *"
-	},
-	"email-address": {
-		"original": "Email address *",
-		"value": "Email address *"
-	},
-	"eyebrow-heading": {
-		"original": "\n      Eyebrow Heading\n    ",
-		"value": "眉頭"
-	},
-	"full-name": {
-		"original": "Full name *",
-		"value": "Full name *"
 	},
 	"heading": {
 		"original": "\n      Heading\n    ",
@@ -111,14 +167,6 @@
 		"original": "    \n        <p>Sometimes you only need a small amount of text. An icon section within a card grid is a great option to showcase your content.</p>\n\n    ",
 		"value": "<p>少量のテキストだけが必要な場合もあります。カード グリッド内のアイコン セクションは、コンテンツを紹介するのに最適なオプションです。</p>\n"
 	},
-	"markdown:these-versatile-cards-can-be-used-to-talk-about-your-services-or-products-or-anything-else-you-are-keen-to-share-with-your-audience": {
-		"original": "    \n        <p>These versatile cards can be used to talk about your services or products, or anything else you are keen to share with your audience.</p>\n\n    ",
-		"value": "<p>これらの多用途カードは、サービスや製品、または聴衆と共有したいその他のことについて話すために使用できます。</p>\n"
-	},
-	"message": {
-		"original": "Message",
-		"value": "Message"
-	},
 	"phone-number": {
 		"original": "Phone number",
 		"value": "Phone number"
@@ -126,54 +174,6 @@
 	"tag-or-label-headline": {
 		"original": "\n      Tag or label headline\n    ",
 		"value": "見出しにタグまたはラベルを付ける"
-	},
-	"a-contact-block": {
-		"original": "\n      A contact block\n    ",
-		"value": "接点ブロック"
-	},
-	"an-image-card-grid": {
-		"original": "\n      An image card grid\n    ",
-		"value": "画像カードグリッド"
-	},
-	"markdown:add-some-description-text-to-complement-the-block": {
-		"original": "    \n        <p>Add some description text to complement the block.</p>\n\n    ",
-		"value": "<p>ブロックを補完する説明テキストを追加します。</p>\n"
-	},
-	"markdown:address-1-fake-st-faketown": {
-		"original": "    \n        <p>Address: 1 Fake St, Faketown</p>\n\n    ",
-		"value": "<p>住所：1 Fake St, Faketown</p>\n"
-	},
-	"markdown:email-address-mybusiness@businesscom": {
-		"original": "    \n        <p>Email address: mybusiness@business.com</p>\n\n    ",
-		"value": "<p>電子メールアドレス：</p>\n"
-	},
-	"markdown:invite-your-customers-to-get-in-touch-with-you": {
-		"original": "    \n        <p>Invite your customers to get in touch with you.</p>\n\n    ",
-		"value": "    \n        <p>Invite your customers to get in touch with you.</p>\n\n    "
-	},
-	"markdown:opening-hours-9-5pm-monday-to-friday": {
-		"original": "    \n        <p>Opening hours: 9-5pm, Monday to Friday</p>\n\n    ",
-		"value": "<p>営業時間: 月曜日から金曜日の 9 時から 17 時まで</p>\n"
-	},
-	"markdown:phone-number-312-325-326": {
-		"original": "    \n        <p>Phone number: 312 325 326</p>\n\n    ",
-		"value": "<p>電話番号： 312 325 326</p>\n"
-	},
-	"markdown:these-image-cards-combine-a-short-written-message-and-a-strong-visual-image": {
-		"original": "    \n        <p>These image cards combine a short written message and a strong visual image.</p>\n\n    ",
-		"value": "    \n        <p>These image cards combine a short written message and a strong visual image.</p>\n\n    "
-	},
-	"markdown:this-is-a-simple-yet-powerful-block-to-display-not-only-your-location-by-using-openstreetmaps-but-also-any-other-contact-details-you-wish-to-share-with-your-customers": {
-		"original": "    \n        <p>This is a simple yet powerful block to display not only your location by using OpenStreetMaps, but also any other contact details you wish to share with your customers.</p>\n\n    ",
-		"value": "<p>これは、OpenStreetMaps を使用して現在地だけでなく、顧客と共有したいその他の連絡先の詳細も表示する、シンプルかつ強力なブロックです。</p>\n"
-	},
-	"primary-heading": {
-		"original": "\n      Primary Heading\n    ",
-		"value": "\n      Primary Heading\n    "
-	},
-	"submit": {
-		"original": "\n        Submit\n        \n            <!--bookshop-live name(generic/hero-library-icon) params(hero_library_icon_name:arrow_type icon_type:\"solid\" icon_size:'extra-small'  color:'transparent') context() -->\n\n\n\n<span class=\"c-hero-library-icon c-hero-library-icon--extra-small c-hero-library-icon--solid \" style=\"--c-hero-library-icon-color: transparent\">\n    \n        <svg aria-hidden=\"true\" class=\"c-hero-library-icon__svg\" fill=\"currentColor\" viewBox=\"0 0 24 24\" xmlns=\"http://www.w3.org/2000/svg\">\n  <path clip-rule=\"evenodd\" d=\"M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z\" fill-rule=\"evenodd\"></path>\n</svg>\n    \n</span>\n<!--bookshop-live end-->\n        \n    ",
-		"value": "\n        Submit\n        \n            <!--bookshop-live name(generic/hero-library-icon) params(hero_library_icon_name:arrow_type icon_type:\"solid\" icon_size:'extra-small'  color:'transparent') context() -->\n\n\n\n<span class=\"c-hero-library-icon c-hero-library-icon--extra-small c-hero-library-icon--solid \" style=\"--c-hero-library-icon-color: transparent\">\n    \n        <svg aria-hidden=\"true\" class=\"c-hero-library-icon__svg\" fill=\"currentColor\" viewBox=\"0 0 24 24\" xmlns=\"http://www.w3.org/2000/svg\">\n  <path clip-rule=\"evenodd\" d=\"M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z\" fill-rule=\"evenodd\"></path>\n</svg>\n    \n</span>\n<!--bookshop-live end-->\n        \n    "
 	},
 	"a-component-to-showcase-your-brand": {
 		"original": "\n      A component to showcase your brand\n    ",
@@ -215,9 +215,9 @@
 		"original": "$95 per month",
 		"value": "$95 per month"
 	},
-	"empower-your-business-with-this-brilliant-template": {
-		"original": "\n      Empower your business with this brilliant template\n    ",
-		"value": "この素晴らしいテンプレートでビジネスを強化しましょう"
+	"empower-your-business-with-this-brilliant-multilingual!": {
+		"original": "\n      Empower your business with this brilliant multilingual!\n    ",
+		"value": "\n      Empower your business with this brilliant multilingual!\n    "
 	},
 	"image-gallery": {
 		"original": "\n      Image Gallery\n    ",
